--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "gsap": "^3.11.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-gsap": "^3.2.1",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
+    "stats-js": "^1.0.1",
     "swiper": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
